[gd_scene load_steps=6 format=3 uid="uid://dah76srhmroks"]

[ext_resource type="Script" path="res://enemy_ranged.gd" id="1_ug5oc"]
[ext_resource type="Texture2D" uid="uid://bd324dfe0brge" path="res://Arte/ghost_1.png" id="2_3gof0"]
[ext_resource type="PackedScene" uid="uid://c3g3xxfejaisr" path="res://Ataques/Enemigos/enemy_bullet.tscn" id="2_udnc7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5s5hm"]
radius = 18.0
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gfj13"]
radius = 261.017

[node name="EnemyGhost" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ug5oc")
bullet = ExtResource("2_udnc7")
health = 90

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5s5hm")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_3gof0")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_gfj13")

[node name="TimerShoot" type="Timer" parent="."]

[node name="TimerAttackCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="TimerShoot" to="." method="_on_timer_shoot_timeout"]
